--- a/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Shared/_NotificationSettings.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Shared/_NotificationSettings.cshtml
@@ -1,44 +1,43 @@
-﻿  <div class="text-secondary my-3">
-                        <h3 class="text-center">Notification Settings</h3>
-                        <div class="bg-secondary-subtle ps-3  py-3">Get a notification for</div>
+﻿<div class="text-secondary my-3">
+    <h3 class="text-center">Notification Settings</h3>
+    <div class="bg-secondary-subtle ps-3  py-3">Get a notification for</div>
 
-                        <div class="border-bottom pb-3">
-                            <div class="d-flex justify-content-between mt-3 px-3">
-                                <div>Recommended missions</div>
-                                <input type="checkbox" class="form-check" />
-                            </div>
-                            <div class="d-flex justify-content-between mt-3 px-3">
-                                <div>Volunteering Hours</div>
-                                <input type="checkbox" class="form-check" />
-                            </div>
-                            <div class="d-flex justify-content-between mt-3 px-3">
-                                <div>Volunteering Goals</div>
-                                <input type="checkbox" class="form-check" />
-                            </div>
-                            <div class="d-flex justify-content-between mt-3 px-3">
-                                <div>My Comments</div>
-                                <input type="checkbox" class="form-check" />
-                            </div>
-                            <div class="d-flex justify-content-between mt-3 px-3">
-                                <div>My Stories</div>
-                                <input type="checkbox" class="form-check" />
-                            </div>
-                            <div class="d-flex justify-content-between mt-3 px-3">
-                                <div>New Missions</div>
-                                <input type="checkbox" class="form-check" />
-                            </div>
-                            <div class="d-flex justify-content-between mt-3 px-3">
-                                <div>New Messages</div>
-                                <input type="checkbox" class="form-check" />
-                            </div>
-                        </div>
+    <div class="border-bottom pb-3">
+        <div class="d-flex justify-content-between mt-3 px-3">
+            <div>Recommended missions</div>
+            <input type="checkbox" class="form-check" />
+        </div>
+        <div class="d-flex justify-content-between mt-3 px-3">
+            <div>Volunteering Hours</div>
+            <input type="checkbox" class="form-check" />
+        </div>
+        <div class="d-flex justify-content-between mt-3 px-3">
+            <div>Volunteering Goals</div>
+            <input type="checkbox" class="form-check" />
+        </div>
+        <div class="d-flex justify-content-between mt-3 px-3">
+            <div>My Comments</div>
+            <input type="checkbox" class="form-check" />
+        </div>
+        <div class="d-flex justify-content-between mt-3 px-3">
+            <div>My Stories</div>
+            <input type="checkbox" class="form-check" />
+        </div>
+        <div class="d-flex justify-content-between mt-3 px-3">
+            <div>New Missions</div>
+            <input type="checkbox" class="form-check" />
+        </div>
+        <div class="d-flex justify-content-between mt-3 px-3">
+            <div>New Messages</div>
+            <input type="checkbox" class="form-check" />
+        </div>
+    </div>
 
-                        <div class="d-flex mt-3 justify-content-center">
-                              <button type="submit" class="btn border rounded-pill px-4 py-2 orange-btn"
-                                style="border-color: #F88634 !important">
-                            Save
-                        </button>
-                        <a  class="btn border-secondary rounded-pill px-4 py-2 ms-3 text-secondary"
-                   >Cancle</a>
-                        </div>
-                    </div>
+    <div class="d-flex mt-3 justify-content-center">
+        <button type="submit" class="btn border rounded-pill px-4 py-2 orange-btn"
+                style="border-color: #F88634 !important">
+            Save
+        </button>
+        <a class="btn border-secondary rounded-pill px-4 py-2 ms-3 text-secondary" id="cancleSettingBtn">Cancle</a>
+    </div>
+</div>
